# channel

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.c
include/: channel.h
src/: channel.c  channel_posix.c  lock_free_queue.c  lock_free_queue.h  queue.c
